--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="link1">http://www.gutenberg.org/ebooks/49803</string>
+    <string name="link2">http://www.gutenberg.org/files/49803/</string>
+    <string name="link3">http://download.cnet.com/windows/</string>
+    <string name="link4">http://www.martystepp.com/files/</string>
 </resources>
