downloader working (slight problem with file extension)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="link2">http://www.gutenberg.org/files/49803/</string>
     <string name="link3">http://download.cnet.com/windows/</string>
     <string name="link4">http://www.martystepp.com/files/</string>
+    <string name="link5">http://fffansubs.org/?page_id=3632</string>
+    <string name="link6">https://hatsuyuki-fansubs.com/</string>
+    <string name="link7">http://download.cnet.com/windows/educational-software/</string>
+
 </resources>
